MidnightControls 1.8.2 - 1.20 & Bug Fixes
- Update to 1.20
- Fix virtual mouse cursor not being visible
- Add option to hide the normal mouse cursor

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -84,33 +84,55 @@
   "midnightcontrols.hud_side.left": "Links",
   "midnightcontrols.hud_side.right": "Rechts",
   "midnightcontrols.menu.analog_movement": "Analoge Bewegung",
+  "midnightcontrols.menu.analog_movement.tooltip": "Aktiviert analoge Bewegung, wenn möglich.",
   "midnightcontrols.menu.auto_switch_mode": "Automatischer Wechsel",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "Ob der Eingabemodus automatisch auf Controller eingestellt werden soll, wenn einer verbunden wird.",
   "midnightcontrols.menu.controller": "Controller",
   "midnightcontrols.menu.controller2": "Zweiter Controller",
+  "midnightcontrols.menu.controller2.tooltip": "Zweiter Controller, zum Beispiel für Joy-Cons.",
   "midnightcontrols.menu.controller_type": "Controller-Typ",
+  "midnightcontrols.menu.controller_type.tooltip": "Der Controllertyp für den die Knöpfe angezeigt werden sollen.",
   "midnightcontrols.menu.controls_mode": "Modus",
+  "midnightcontrols.menu.controls_mode.tooltip": "Der Steuerungsmodus.",
   "midnightcontrols.menu.double_tap_to_sprint": "Doppel-Tipp zum Sprinten",
   "midnightcontrols.menu.fast_block_placing": "Schnelles Bauen",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "Während des Fliegens im Kreativmodus das schnelle Platzieren von Knöpfen aktivieren. §cWird von manchen Servern als cheaten eingestuft.",
   "midnightcontrols.menu.fly_drifting": "Flug-Drifting",
+  "midnightcontrols.menu.fly_drifting.tooltip": "Aktiviert das Flug-Drifting von Vanilla Minecraft.",
   "midnightcontrols.menu.fly_drifting_vertical": "Vertikales Flug-Drifting",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "Aktiviert das vertikale Flug-Drifting von Vanilla Minecraft",
   "midnightcontrols.menu.hud_enable": "HUD aktivieren",
+  "midnightcontrols.menu.hud_enable.tooltip": "(De-)Aktiviert die Knopfanzeige im Spiel",
   "midnightcontrols.menu.hud_side": "HUD-Seite",
+  "midnightcontrols.menu.hud_side.tooltip": "Die Position der Knopfanzeige.",
   "midnightcontrols.menu.invert_right_x_axis": "X rechts umkehren",
   "midnightcontrols.menu.invert_right_y_axis": "Y rechts umkehren",
   "midnightcontrols.menu.keyboard_controls": "Tastatureinstellungen...",
   "midnightcontrols.menu.left_dead_zone": "Tote Zone des linken Sticks",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "Die tote Zone für den linken Analogstick.",
   "midnightcontrols.menu.mappings.open_input_str": "Öffne den Controller-Mapping Editor",
   "midnightcontrols.menu.max_left_x_value": "Maximalwert Linke X-Achse",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "Ändert den maximalen Wert der linken X-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
   "midnightcontrols.menu.max_left_y_value": "Maximalwert Linke Y-Achse",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "Ändert den maximalen Wert der linken Y-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
   "midnightcontrols.menu.max_right_x_value": "Maximalwert Rechte X-Achse",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "Ändert den maximalen Wert der rechten X-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
   "midnightcontrols.menu.max_right_y_value": "Maximalwert Rechte Y-Achse",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "Ändert den maximalen Wert der rechten Y-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
   "midnightcontrols.menu.mouse_speed": "Mausgeschwindigkeit",
+  "midnightcontrols.menu.mouse_speed.tooltip": "Die emulierte Mausgeschwindigkeit des Controllers.",
   "midnightcontrols.menu.reacharound.horizontal": "Vorderes Blockplatzieren",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "Aktiviert vorderes Platzieren von Blöcken, §cwird von manchen Servern als cheaten eingestuft§r.",
   "midnightcontrols.menu.reacharound.vertical": "Vertikales Umgreifen",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "Aktiviert vertikales Platzieren von Blöcken, §cwird von manchen Servern als cheaten eingestuft§r.",
   "midnightcontrols.menu.reload_controller_mappings": "Controller-Mappings neuladen",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "Lädt die Controller-Mappings neu.",
   "midnightcontrols.menu.right_dead_zone": "Tote Zone des rechten Sticks",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "Die tote Zone für den rechten Analogstick.",
   "midnightcontrols.menu.rotation_speed": "Rotationsgeschwindigkeit (X-Achse)",
+  "midnightcontrols.menu.rotation_speed.tooltip": "Die Kamerarotationsgeschwindigkeit im Controllermodus. (X-Achse)",
   "midnightcontrols.menu.y_axis_rotation_speed": "Rotationsgeschwindigkeit (Y-Achse)",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "Die Kamerarotationsgeschwindigkeit im Controllermodus. (Y-Achse)",
   "midnightcontrols.menu.separate_controller_profile": "Separates Controller-Profil",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "Generell",
@@ -123,34 +145,12 @@
   "midnightcontrols.menu.title.mappings.string": "Mapping-Datei Editor",
   "midnightcontrols.menu.title.visual": "Visuelle Optionen",
   "midnightcontrols.menu.unfocused_input": "Unfokussierte Eingabe",
+  "midnightcontrols.menu.unfocused_input.tooltip": "Erlaube Controllereingabe auch wenn das Fenster nicht fokussiert ist.",
   "midnightcontrols.menu.virtual_mouse": "Virtuelle Maus",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "Aktiviere die virtuelle Maus.",
   "midnightcontrols.menu.virtual_mouse.skin": "Aussehen der Virtuellen Maus",
   "midnightcontrols.narrator.unbound": "%s entbunden",
   "midnightcontrols.not_bound": "Nicht zugewiesen",
-  "midnightcontrols.tooltip.analog_movement": "Aktiviert analoge Bewegung, wenn möglich.",
-  "midnightcontrols.tooltip.auto_switch_mode": "Ob der Eingabemodus automatisch auf Controller eingestellt werden soll, wenn einer verbunden wird.",
-  "midnightcontrols.tooltip.controller2": "Zweiter Controller, zum Beispiel für Joy-Cons.",
-  "midnightcontrols.tooltip.controller_type": "Der Controllertyp für den die Knöpfe angezeigt werden sollen.",
-  "midnightcontrols.tooltip.controls_mode": "Der Steuerungsmodus.",
-  "midnightcontrols.tooltip.fast_block_placing": "Während des Fliegens im Kreativmodus das schnelle Platzieren von Knöpfen aktivieren. §cWird von manchen Servern als cheaten eingestuft.",
-  "midnightcontrols.tooltip.fly_drifting": "Aktiviert das Flug-Drifting von Vanilla Minecraft.",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "Aktiviert das vertikale Flug-Drifting von Vanilla Minecraft",
-  "midnightcontrols.tooltip.hud_enable": "(De-)Aktiviert die Knopfanzeige im Spiel",
-  "midnightcontrols.tooltip.hud_side": "Die Position der Knopfanzeige.",
-  "midnightcontrols.tooltip.left_dead_zone": "Die tote Zone für den linken Analogstick.",
-  "midnightcontrols.tooltip.max_left_x_value": "Ändert den maximalen Wert der linken X-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
-  "midnightcontrols.tooltip.max_left_y_value": "Ändert den maximalen Wert der linken Y-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
-  "midnightcontrols.tooltip.max_right_x_value": "Ändert den maximalen Wert der rechten X-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
-  "midnightcontrols.tooltip.max_right_y_value": "Ändert den maximalen Wert der rechten Y-Achse. Nützlich, wenn deine Achse nicht bis zum Maximum geht.",
-  "midnightcontrols.tooltip.mouse_speed": "Die emulierte Mausgeschwindigkeit des Controllers.",
-  "midnightcontrols.tooltip.reacharound.horizontal": "Aktiviert vorderes Platzieren von Blöcken, §cwird von manchen Servern als cheaten eingestuft§r.",
-  "midnightcontrols.tooltip.reacharound.vertical": "Aktiviert vertikales Platzieren von Blöcken, §cwird von manchen Servern als cheaten eingestuft§r.",
-  "midnightcontrols.tooltip.reload_controller_mappings": "Lädt die Controller-Mappings neu.",
-  "midnightcontrols.tooltip.right_dead_zone": "Die tote Zone für den rechten Analogstick.",
-  "midnightcontrols.tooltip.rotation_speed": "Die Kamerarotationsgeschwindigkeit im Controllermodus. (X-Achse)",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "Die Kamerarotationsgeschwindigkeit im Controllermodus. (Y-Achse)",
-  "midnightcontrols.tooltip.unfocused_input": "Erlaube Controllereingabe auch wenn das Fenster nicht fokussiert ist.",
-  "midnightcontrols.tooltip.virtual_mouse": "Aktiviere die virtuelle Maus.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Standard Hell",
   "midnightcontrols.virtual_mouse.skin.default_dark": "Standard Dunkel",
   "midnightcontrols.virtual_mouse.skin.second_light": "Alternativ Hell",
