--- a/src/main/resources/assets/midnightcontrols/lang/uk_ua.json
+++ b/src/main/resources/assets/midnightcontrols/lang/uk_ua.json
@@ -144,38 +144,38 @@
   "midnightcontrols.menu.virtual_mouse.skin": "Дизайн віртуальної мишки",
   "midnightcontrols.narrator.unbound": "Звільнений %s",
   "midnightcontrols.not_bound": "Не призначено",
-  "midnightcontrols.tooltip.analog_movement": "Включає аналоговий рух, коли це можливо.",
-  "midnightcontrols.tooltip.auto_switch_mode": "Автоматичне перемикання на новий, тільки підключений контролер.",
-  "midnightcontrols.tooltip.controller2": "Додатковий контролер, наприклад для джой-конів.",
-  "midnightcontrols.tooltip.controller_type": "Тип контролера, щоб правильно зіставити іконки кнопок.",
-  "midnightcontrols.tooltip.controls_mode": "Тип контролю за грою.",
-  "midnightcontrols.tooltip.double_tap_to_sprint": "При подвійному переміщенні на лівий стик, персонаж починає бігти.",
-  "midnightcontrols.tooltip.fast_block_placing": "Під час польоту в творчому режимі дозволяє швидко розміщувати блоки в залежності від вашої швидкості. §cНа деяких серверах це може розцінюватися як читерство.§r",
-  "midnightcontrols.tooltip.fly_drifting": "Під час польоту включає ванільну інерцію.",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "Під час польоту включає ванільну вертикальну інерцію.",
-  "midnightcontrols.tooltip.hud_enable": "Переключає бачення іконок кнопок контролера на екрані.",
-  "midnightcontrols.tooltip.hud_side": "Розташування інтерфейсу у певний бік.",
-  "midnightcontrols.tooltip.left_dead_zone": "Мертва зона для лівого аналогового стику контролера.",
-  "midnightcontrols.tooltip.max_left_x_value": "Змінює те, що мод в результаті вважає максимальним значенням для лівої осі X. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
-  "midnightcontrols.tooltip.max_left_y_value": "Змінює те, що мод в результаті вважає максимальним значенням для лівої осі Y. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
-  "midnightcontrols.tooltip.max_right_x_value": "Змінює те, що мод в результаті вважає максимальним значенням для правої осі X. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
-  "midnightcontrols.tooltip.max_right_y_value": "Змінює те, що мод в результаті вважає максимальним значенням для правої осі Y. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
-  "midnightcontrols.tooltip.mouse_speed": "Швидкість миші, що емульується контролером.",
-  "midnightcontrols.tooltip.reacharound.horizontal": "Дозволяє розміщувати передній блок перед собою. §cМоже розглядатися як читерство на деяких серверах§r.",
-  "midnightcontrols.tooltip.reacharound.vertical": "Забезпечує вертикальне охоплення. §cМоже розглядатися як шахрайство на деяких серверах§r.",
-  "midnightcontrols.tooltip.reload_controller_mappings": "Перезавантажує файл розкладки контролерів.",
-  "midnightcontrols.tooltip.right_dead_zone": "Мертва зона для правого аналогового стику контролера.",
-  "midnightcontrols.tooltip.rotation_speed": "Швидкість обертання камери по осі X в режимі контролера.",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "Швидкість обертання камери по осі Y в режимі контролера.",
-  "midnightcontrols.tooltip.unfocused_input": "Дозволити введення з контролера, навіть якщо гра сфокусована.",
-  "midnightcontrols.tooltip.virtual_mouse": "Включити віртуальну мишу дуже корисно при грі двом на одному комп'ютері.",
+  "midnightcontrols.menu.analog_movement.tooltip": "Включає аналоговий рух, коли це можливо.",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "Автоматичне перемикання на новий, тільки підключений контролер.",
+  "midnightcontrols.menu.controller2.tooltip": "Додатковий контролер, наприклад для джой-конів.",
+  "midnightcontrols.menu.controller_type.tooltip": "Тип контролера, щоб правильно зіставити іконки кнопок.",
+  "midnightcontrols.menu.controls_mode.tooltip": "Тип контролю за грою.",
+  "midnightcontrols.menu.double_tap_to_sprint.tooltip": "При подвійному переміщенні на лівий стик, персонаж починає бігти.",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "Під час польоту в творчому режимі дозволяє швидко розміщувати блоки в залежності від вашої швидкості. §cНа деяких серверах це може розцінюватися як читерство.§r",
+  "midnightcontrols.menu.fly_drifting.tooltip": "Під час польоту включає ванільну інерцію.",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "Під час польоту включає ванільну вертикальну інерцію.",
+  "midnightcontrols.menu.hud_enable.tooltip": "Переключає бачення іконок кнопок контролера на екрані.",
+  "midnightcontrols.menu.hud_side.tooltip": "Розташування інтерфейсу у певний бік.",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "Мертва зона для лівого аналогового стику контролера.",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "Змінює те, що мод в результаті вважає максимальним значенням для лівої осі X. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "Змінює те, що мод в результаті вважає максимальним значенням для лівої осі Y. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "Змінює те, що мод в результаті вважає максимальним значенням для правої осі X. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "Змінює те, що мод в результаті вважає максимальним значенням для правої осі Y. Корисно, якщо ваша вісь не використовує весь діапазон і здається повільною.",
+  "midnightcontrols.menu.mouse_speed.tooltip": "Швидкість миші, що емульується контролером.",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "Дозволяє розміщувати передній блок перед собою. §cМоже розглядатися як читерство на деяких серверах§r.",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "Забезпечує вертикальне охоплення. §cМоже розглядатися як шахрайство на деяких серверах§r.",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "Перезавантажує файл розкладки контролерів.",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "Мертва зона для правого аналогового стику контролера.",
+  "midnightcontrols.menu.rotation_speed.tooltip": "Швидкість обертання камери по осі X в режимі контролера.",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "Швидкість обертання камери по осі Y в режимі контролера.",
+  "midnightcontrols.menu.unfocused_input.tooltip": "Дозволити введення з контролера, навіть якщо гра сфокусована.",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "Включити віртуальну мишу дуже корисно при грі двом на одному комп'ютері.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Звичайний світлий",
   "midnightcontrols.virtual_mouse.skin.default_dark": "Звичайний темний",
   "midnightcontrols.virtual_mouse.skin.second_light": "Додатковий світлий",
   "midnightcontrols.virtual_mouse.skin.second_dark": "Додатковий темний",
   "modmenu.descriptionTranslation.midnightcontrols": "Додавання підтримки контролера та покращення елементів керування в цілому.\nРозгалужений від LambdaControls, підтримка якого, на жаль, припинена..",
   "midnightcontrols.menu.joystick_as_mouse": "Завжди використовуйте лівий стік як мишку",
-  "midnightcontrols.tooltip.joystick_as_mouse": "Джойстик поводиться як миша в кожному меню.",
+  "midnightcontrols.menu.joystick_as_mouse.tooltip": "Джойстик поводиться як миша в кожному меню.",
   "midnightcontrols.menu.controller_toggle_sneak": "Перемикач присідання на контролері",
   "midnightcontrols.menu.controller_toggle_sprint": "Перемикач бігу на контролері",
   "midnightcontrols.menu.move_chat": "Перемістити поле введення чату вгору",
