--- a/src/main/resources/assets/midnightcontrols/lang/zh_cn.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_cn.json
@@ -121,30 +121,30 @@
   "midnightcontrols.menu.virtual_mouse.skin": "虚拟鼠标指针样式",
   "midnightcontrols.narrator.unbound": "取消绑定 %s",
   "midnightcontrols.not_bound": "未绑定",
-  "midnightcontrols.tooltip.analog_movement": "若游戏机制允许，则可根据推动摇杆的力度与幅度决定移动的速度。",
-  "midnightcontrols.tooltip.auto_switch_mode": "如果已有手柄连接，则自动切换为手柄操作模式。",
-  "midnightcontrols.tooltip.controller2": "使用额外的手柄，比如将一左一右的两个 Joy-Con 合为一个功能完全的手柄。",
-  "midnightcontrols.tooltip.controller_type": "选择手柄类型，以显示对应的按键图标。",
-  "midnightcontrols.tooltip.controls_mode": "操作模式",
-  "midnightcontrols.tooltip.fast_block_placing": "在创造模式中处于飞行状态时，可以根据你飞行的速度快速放置方块。\n§c在部分服务器可能会被认定为作弊。",
-  "midnightcontrols.tooltip.fly_drifting": "处于飞行状态时，启用原版的水平方向飞行惯性（缓停滑行）。",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "处于飞行状态时，启用原版的垂直方向飞行惯性（缓停滑行）。",
-  "midnightcontrols.tooltip.hud_enable": "显示手柄按键操作提示。",
-  "midnightcontrols.tooltip.hud_side": "HUD的位置位于画面的哪一侧。",
-  "midnightcontrols.tooltip.left_dead_zone": "左摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
-  "midnightcontrols.tooltip.max_left_x_value": "更改左摇杆X轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致在识别摇杆输入的精确值的情况下，左右移动较为缓慢等问题，本项可能会有所帮助。",
-  "midnightcontrols.tooltip.max_left_y_value": "更改左摇杆Y轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致在识别摇杆输入的精确值的情况下，前后移动较为缓慢等问题，本项可能会有所帮助。",
-  "midnightcontrols.tooltip.max_right_x_value": "更改右摇杆X轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致镜头左右旋转较为缓慢等问题，本项可能会有所帮助。",
-  "midnightcontrols.tooltip.max_right_y_value": "更改右摇杆Y轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致镜头上下旋转较为缓慢等问题，本项可能会有所帮助。",
-  "midnightcontrols.tooltip.mouse_speed": "手柄模拟的鼠标的移动速度。",
-  "midnightcontrols.tooltip.reacharound.horizontal": "启用水平方向方块放置辅助，可在脚下方块的前方放置方块。\n§c在部分服务器可能会被认定为作弊。",
-  "midnightcontrols.tooltip.reacharound.vertical": "启用垂直方向方块放置辅助，可在脚下方块的下方放置方块。\n§c在部分服务器可能会被认定为作弊。",
-  "midnightcontrols.tooltip.reload_controller_mappings": "重新加载手柄的按键映射文件。",
-  "midnightcontrols.tooltip.right_dead_zone": "右摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
-  "midnightcontrols.tooltip.rotation_speed": "手柄操作模式下的镜头旋转速度。(X)",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "手柄操作模式下的镜头旋转速度。(Y)",
-  "midnightcontrols.tooltip.unfocused_input": "即使游戏窗口处于非活动状态，也允许手柄进行按键输入。",
-  "midnightcontrols.tooltip.virtual_mouse": "启用虚拟鼠标，在分屏的情况下很有用。",
+  "midnightcontrols.menu.analog_movement.tooltip": "若游戏机制允许，则可根据推动摇杆的力度与幅度决定移动的速度。",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "如果已有手柄连接，则自动切换为手柄操作模式。",
+  "midnightcontrols.menu.controller2.tooltip": "使用额外的手柄，比如将一左一右的两个 Joy-Con 合为一个功能完全的手柄。",
+  "midnightcontrols.menu.controller_type.tooltip": "选择手柄类型，以显示对应的按键图标。",
+  "midnightcontrols.menu.controls_mode.tooltip": "操作模式",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "在创造模式中处于飞行状态时，可以根据你飞行的速度快速放置方块。\n§c在部分服务器可能会被认定为作弊。",
+  "midnightcontrols.menu.fly_drifting.tooltip": "处于飞行状态时，启用原版的水平方向飞行惯性（缓停滑行）。",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "处于飞行状态时，启用原版的垂直方向飞行惯性（缓停滑行）。",
+  "midnightcontrols.menu.hud_enable.tooltip": "显示手柄按键操作提示。",
+  "midnightcontrols.menu.hud_side.tooltip": "HUD的位置位于画面的哪一侧。",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "左摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "更改左摇杆X轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致在识别摇杆输入的精确值的情况下，左右移动较为缓慢等问题，本项可能会有所帮助。",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "更改左摇杆Y轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致在识别摇杆输入的精确值的情况下，前后移动较为缓慢等问题，本项可能会有所帮助。",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "更改右摇杆X轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致镜头左右旋转较为缓慢等问题，本项可能会有所帮助。",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "更改右摇杆Y轴最大值的识别范围。\n若感觉即便推满摇杆也未达到最大的输入值，导致镜头上下旋转较为缓慢等问题，本项可能会有所帮助。",
+  "midnightcontrols.menu.mouse_speed.tooltip": "手柄模拟的鼠标的移动速度。",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "启用水平方向方块放置辅助，可在脚下方块的前方放置方块。\n§c在部分服务器可能会被认定为作弊。",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "启用垂直方向方块放置辅助，可在脚下方块的下方放置方块。\n§c在部分服务器可能会被认定为作弊。",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "重新加载手柄的按键映射文件。",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "右摇杆配置的死区。\n死区决定摇杆要偏离中心位置多远才能让摇杆的输入有效。",
+  "midnightcontrols.menu.rotation_speed.tooltip": "手柄操作模式下的镜头旋转速度。(X)",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "手柄操作模式下的镜头旋转速度。(Y)",
+  "midnightcontrols.menu.unfocused_input.tooltip": "即使游戏窗口处于非活动状态，也允许手柄进行按键输入。",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "启用虚拟鼠标，在分屏的情况下很有用。",
   "midnightcontrols.virtual_mouse.skin.default_light": "默认样式（白色）",
   "midnightcontrols.virtual_mouse.skin.default_dark": "默认样式（黑色）",
   "midnightcontrols.virtual_mouse.skin.second_light": "额外样式（白色）",
