--- a/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
@@ -172,33 +172,33 @@
   "midnightcontrols.menu.virtual_mouse.skin": "虛擬滑鼠指標樣式",
   "midnightcontrols.narrator.unbound": "取消綁定 %s",
   "midnightcontrols.not_bound": "未綁定",
-  "midnightcontrols.tooltip.analog_movement": "若遊戲機制允許，則可根據推動搖桿的力度與幅度決定移動的速度。",
-  "midnightcontrols.tooltip.auto_switch_mode": "如果已有搖桿連接，則自動切換為搖桿操作模式。",
-  "midnightcontrols.tooltip.controller2": "使用額外的搖桿，例如將左右兩個的 Joy-Con 合為一個功能完全的搖桿。",
-  "midnightcontrols.tooltip.controller_type": "選擇搖桿類型，以顯示對應的按鍵圖標。",
-  "midnightcontrols.tooltip.controls_mode": "操作模式",
-  "midnightcontrols.tooltip.double_tap_to_sprint": "切換是否啟用向前行走按鍵，快速按兩次走路讓玩家奔跑",
-  "midnightcontrols.tooltip.fast_block_placing": "在創造模式中處於飛行狀態時，可以根據你飛行的速度快速放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
-  "midnightcontrols.tooltip.fly_drifting": "處於飛行狀態時，啟用原版的水平方向飛行慣性（緩停滑行）。",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "處於飛行狀態時，啟用原版的垂直方向飛行慣性（緩停滑行）。",
-  "midnightcontrols.tooltip.hud_enable": "顯示搖桿按鍵操作提示。",
-  "midnightcontrols.tooltip.hud_side": "HUD 的位置位於畫面的哪一側。",
-  "midnightcontrols.tooltip.joystick_as_mouse": "讓搖桿在每個介面有滑鼠的功能。",
-  "midnightcontrols.tooltip.left_dead_zone": "左搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
-  "midnightcontrols.tooltip.max_left_x_value": "更改左搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_left_y_value": "更改左搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_right_x_value": "更改右搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_right_y_value": "更改右搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.mouse_speed": "搖桿模擬的滑鼠指標的移動速度。",
-  "midnightcontrols.tooltip.move_chat": "將聊天輸入欄位移至頂部，以便在使用虛擬鍵盤的裝置上更好地輸入。",
-  "midnightcontrols.tooltip.reacharound.horizontal": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
-  "midnightcontrols.tooltip.reacharound.vertical": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
-  "midnightcontrols.tooltip.reload_controller_mappings": "重新加載搖桿的按鍵映射文件。",
-  "midnightcontrols.tooltip.right_dead_zone": "右搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
-  "midnightcontrols.tooltip.rotation_speed": "搖桿操作模式下的鏡頭旋轉速度。（X）",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "搖桿操作模式下的鏡頭旋轉速度。（Y）",
-  "midnightcontrols.tooltip.unfocused_input": "即使遊戲窗口處於非活動狀態，也允許搖桿進行按鍵輸入。",
-  "midnightcontrols.tooltip.virtual_mouse": "啟用虛擬滑鼠指標，在分屏的情況下很有用。",
+  "midnightcontrols.menu.analog_movement.tooltip": "若遊戲機制允許，則可根據推動搖桿的力度與幅度決定移動的速度。",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "如果已有搖桿連接，則自動切換為搖桿操作模式。",
+  "midnightcontrols.menu.controller2.tooltip": "使用額外的搖桿，例如將左右兩個的 Joy-Con 合為一個功能完全的搖桿。",
+  "midnightcontrols.menu.controller_type.tooltip": "選擇搖桿類型，以顯示對應的按鍵圖標。",
+  "midnightcontrols.menu.controls_mode.tooltip": "操作模式",
+  "midnightcontrols.menu.double_tap_to_sprint.tooltip": "切換是否啟用向前行走按鍵，快速按兩次走路讓玩家奔跑",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "在創造模式中處於飛行狀態時，可以根據你飛行的速度快速放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.menu.fly_drifting.tooltip": "處於飛行狀態時，啟用原版的水平方向飛行慣性（緩停滑行）。",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "處於飛行狀態時，啟用原版的垂直方向飛行慣性（緩停滑行）。",
+  "midnightcontrols.menu.hud_enable.tooltip": "顯示搖桿按鍵操作提示。",
+  "midnightcontrols.menu.hud_side.tooltip": "HUD 的位置位於畫面的哪一側。",
+  "midnightcontrols.menu.joystick_as_mouse.tooltip": "讓搖桿在每個介面有滑鼠的功能。",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "左搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "更改左搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "更改左搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "更改右搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "更改右搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.menu.mouse_speed.tooltip": "搖桿模擬的滑鼠指標的移動速度。",
+  "midnightcontrols.menu.move_chat.tooltip": "將聊天輸入欄位移至頂部，以便在使用虛擬鍵盤的裝置上更好地輸入。",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "重新加載搖桿的按鍵映射文件。",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "右搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
+  "midnightcontrols.menu.rotation_speed.tooltip": "搖桿操作模式下的鏡頭旋轉速度。（X）",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "搖桿操作模式下的鏡頭旋轉速度。（Y）",
+  "midnightcontrols.menu.unfocused_input.tooltip": "即使遊戲窗口處於非活動狀態，也允許搖桿進行按鍵輸入。",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "啟用虛擬滑鼠指標，在分屏的情況下很有用。",
   "midnightcontrols.virtual_mouse.skin.default_light": "預設樣式（白色）",
   "midnightcontrols.virtual_mouse.skin.default_dark": "預設樣式（黑色）",
   "midnightcontrols.virtual_mouse.skin.second_light": "額外樣式（白色）",
