--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -125,37 +125,62 @@
   "midnightcontrols.hud_side.left": "Left",
   "midnightcontrols.hud_side.right": "Right",
   "midnightcontrols.menu.analog_movement": "Analog Movement",
+  "midnightcontrols.menu.analog_movement.tooltip": "When possible, enables analog movement.",
   "midnightcontrols.menu.auto_switch_mode": "Auto Switch Mode",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "Whether the controls mode should be switched to Controller automatically if one is connected.",
   "midnightcontrols.menu.controller": "Controller",
   "midnightcontrols.menu.controller2": "Second Controller",
+  "midnightcontrols.menu.controller2.tooltip": "Second controller to use, which allows (for example) Joy-Cons support.",
   "midnightcontrols.menu.controller_toggle_sneak": "Toggle Sneak on Controller",
   "midnightcontrols.menu.controller_toggle_sprint": "Toggle Sprint on Controller",
   "midnightcontrols.menu.controller_type": "Controller Type",
+  "midnightcontrols.menu.controller_type.tooltip": "The controller type you're using (needed to display the correct buttons)",
   "midnightcontrols.menu.controls_mode": "Mode",
+  "midnightcontrols.menu.controls_mode.tooltip": "The controls mode.",
   "midnightcontrols.menu.double_tap_to_sprint": "Double-Tap to Sprint",
+  "midnightcontrols.menu.double_tap_to_sprint.tooltip": "Toggles whether the Walk Forwards key makes the player sprint when double-tapped quickly",
   "midnightcontrols.menu.fast_block_placing": "Fast Block Placing",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "While flying in creative mode, enables fast block placing depending on your speed. §cOn some servers this might be considered as cheating.",
   "midnightcontrols.menu.fly_drifting": "Fly Drifting",
+  "midnightcontrols.menu.fly_drifting.tooltip": "While flying, enables Vanilla drifting/inertia.",
   "midnightcontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "While flying, enables Vanilla vertical drifting/intertia.",
   "midnightcontrols.menu.hud_enable": "Enable HUD",
+  "midnightcontrols.menu.hud_enable.tooltip": "Toggles the on-screen controller button indicator.",
   "midnightcontrols.menu.hud_side": "HUD Side",
+  "midnightcontrols.menu.hud_side.tooltip": "The position of the HUD.",
   "midnightcontrols.menu.invert_right_x_axis": "Invert Right X",
   "midnightcontrols.menu.invert_right_y_axis": "Invert Right Y",
   "midnightcontrols.menu.joystick_as_mouse": "Always use left stick as mouse",
+  "midnightcontrols.menu.joystick_as_mouse.tooltip": "Make the joystick behave like a mouse in every menu.",
   "midnightcontrols.menu.keyboard_controls": "Keyboard Controls...",
   "midnightcontrols.menu.left_dead_zone": "Left Stick Dead Zone",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "The dead zone for the controller's left analog stick.",
   "midnightcontrols.menu.mappings.open_input_str": "Open Mappings File Editor",
   "midnightcontrols.menu.max_left_x_value": "Left X Axis Max Value",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "Changes what the mod considers the highest value for the left X axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.menu.max_left_y_value": "Left Y Axis Max Value",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "Changes what the mod considers the highest value for the left Y axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.menu.max_right_x_value": "Right X Axis Max Value",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "Changes what the mod considers the highest value for the right X axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.menu.max_right_y_value": "Right Y Axis Max Value",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "Changes what the mod considers the highest value for the right Y axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.menu.mouse_speed": "Mouse Speed",
+  "midnightcontrols.menu.mouse_speed.tooltip": "The controller's emulated mouse speed.",
   "midnightcontrols.menu.move_chat": "Move chat input box to top",
+  "midnightcontrols.menu.move_chat.tooltip": "Moves the chat input field to the top, for better input on devices with on-screen keyboards.",
   "midnightcontrols.menu.reacharound.horizontal": "Front Block Placing",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.menu.reacharound.vertical": "Vertical Reacharound",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.menu.reload_controller_mappings": "Reload Controller Mappings",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "Reloads the controller mappings file.",
   "midnightcontrols.menu.right_dead_zone": "Right Stick Dead Zone",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "The dead zone for the controller's right analog stick.",
   "midnightcontrols.menu.rotation_speed": "X Axis Rotation Speed",
+  "midnightcontrols.menu.rotation_speed.tooltip": "The camera's X Axis rotation speed in controller mode.",
   "midnightcontrols.menu.y_axis_rotation_speed": "Y Axis Rotation Speed",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "The camera's Y Axis rotation speed in controller mode.",
   "midnightcontrols.menu.separate_controller_profile": "Separate Controller Profile",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "General",
@@ -168,37 +193,14 @@
   "midnightcontrols.menu.title.mappings.string": "Mappings File Editor",
   "midnightcontrols.menu.title.visual": "Appearance Options",
   "midnightcontrols.menu.unfocused_input": "Unfocused Input",
+  "midnightcontrols.menu.unfocused_input.tooltip": "Allows controller input when the window is not focused.",
   "midnightcontrols.menu.virtual_mouse": "Virtual Mouse",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "Enables the virtual mouse, which is useful during splitscreen.",
   "midnightcontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
+  "midnightcontrols.menu.hide_cursor": "Hide Normal Mouse Cursor",
+  "midnightcontrols.menu.hide_cursor.tooltip": "Hides the normal mouse cursor, leaving only the virtual mouse visible.",
   "midnightcontrols.narrator.unbound": "Unbound %s",
   "midnightcontrols.not_bound": "Not bound",
-  "midnightcontrols.tooltip.analog_movement": "When possible, enables analog movement.",
-  "midnightcontrols.tooltip.auto_switch_mode": "Whether the controls mode should be switched to Controller automatically if one is connected.",
-  "midnightcontrols.tooltip.controller2": "Second controller to use, which allows (for example) Joy-Cons support.",
-  "midnightcontrols.tooltip.controller_type": "The controller type you're using (needed to display the correct buttons)",
-  "midnightcontrols.tooltip.controls_mode": "The controls mode.",
-  "midnightcontrols.tooltip.double_tap_to_sprint": "Toggles whether the Walk Forwards key makes the player sprint when double-tapped quickly",
-  "midnightcontrols.tooltip.fast_block_placing": "While flying in creative mode, enables fast block placing depending on your speed. §cOn some servers this might be considered as cheating.",
-  "midnightcontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
-  "midnightcontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
-  "midnightcontrols.tooltip.hud_side": "The position of the HUD.",
-  "midnightcontrols.tooltip.joystick_as_mouse": "Make the joystick behave like a mouse in every menu.",
-  "midnightcontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analog stick.",
-  "midnightcontrols.tooltip.max_left_x_value": "Changes what the mod considers the highest value for the left X axis. Useful if your axis does not use the full range and seems slow.",
-  "midnightcontrols.tooltip.max_left_y_value": "Changes what the mod considers the highest value for the left Y axis. Useful if your axis does not use the full range and seems slow.",
-  "midnightcontrols.tooltip.max_right_x_value": "Changes what the mod considers the highest value for the right X axis. Useful if your axis does not use the full range and seems slow.",
-  "midnightcontrols.tooltip.max_right_y_value": "Changes what the mod considers the highest value for the right Y axis. Useful if your axis does not use the full range and seems slow.",
-  "midnightcontrols.tooltip.mouse_speed": "The controller's emulated mouse speed.",
-  "midnightcontrols.tooltip.move_chat": "Moves the chat input field to the top, for better input on devices with on-screen keyboards.",
-  "midnightcontrols.tooltip.reacharound.horizontal": "Enables front block placing, §cmight be considered cheating on some servers§r.",
-  "midnightcontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
-  "midnightcontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file.",
-  "midnightcontrols.tooltip.right_dead_zone": "The dead zone for the controller's right analog stick.",
-  "midnightcontrols.tooltip.rotation_speed": "The camera's X Axis rotation speed in controller mode.",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "The camera's Y Axis rotation speed in controller mode.",
-  "midnightcontrols.tooltip.unfocused_input": "Allows controller input when the window is not focused.",
-  "midnightcontrols.tooltip.virtual_mouse": "Enables the virtual mouse, which is useful during splitscreen.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Default Light",
   "midnightcontrols.virtual_mouse.skin.default_dark": "Default Dark",
   "midnightcontrols.virtual_mouse.skin.second_light": "Second Light",
