--- a/src/main/resources/assets/midnightcontrols/lang/es_mx.json
+++ b/src/main/resources/assets/midnightcontrols/lang/es_mx.json
@@ -80,32 +80,54 @@
   "midnightcontrols.hud_side.left": "izquierda",
   "midnightcontrols.hud_side.right": "derecha",
   "midnightcontrols.menu.analog_movement": "Movimiento analógico",
+  "midnightcontrols.menu.analog_movement.tooltip": "Habilita el movimiento analógico cuando es posible.",
   "midnightcontrols.menu.auto_switch_mode": "Cambio de modo automático",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "Si el modo de controles debe cambiarse a Controlador automáticamente si hay uno conectado.",
   "midnightcontrols.menu.controller": "Controlador",
   "midnightcontrols.menu.controller2": "Segundo controlador",
+  "midnightcontrols.menu.controller2.tooltip": "Segundo controlador a uso, que permite el soporte de Joy-Cons por ejemplo.",
   "midnightcontrols.menu.controller_type": "Tipo de controlador",
+  "midnightcontrols.menu.controller_type.tooltip": "El tipo de controlador para mostrar los botones correctos.",
   "midnightcontrols.menu.controls_mode": "Modo",
+  "midnightcontrols.menu.controls_mode.tooltip": "El modo de controles.",
   "midnightcontrols.menu.fast_block_placing": "Colocación rápida de bloques",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "Mientras vuela en modo creativo, permite la colocación rápida de bloques dependiendo su velocidad. §cEn algunos servidores, esto podría considerarse como trampa.",
   "midnightcontrols.menu.fly_drifting": "Volar a la deriva",
+  "midnightcontrols.menu.fly_drifting.tooltip": "Mientras vuela, habilita la deriva/inercia de vainilla.",
   "midnightcontrols.menu.fly_drifting_vertical": "Volar a la deriva vertical",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "Mientras vuela, habilita la deriva/inercia vertical de vainilla.",
   "midnightcontrols.menu.hud_enable": "Habilitar HUD",
+  "midnightcontrols.menu.hud_enable.tooltip": "Alterna el indicador del botón del controlador en pantalla.",
   "midnightcontrols.menu.hud_side": "Lado de HUD",
+  "midnightcontrols.menu.hud_side.tooltip": "La posición del HUD.",
   "midnightcontrols.menu.invert_right_x_axis": "Invertir derecha X",
   "midnightcontrols.menu.invert_right_y_axis": "Invertir derecha Y",
   "midnightcontrols.menu.keyboard_controls": "Controles del teclado...",
   "midnightcontrols.menu.left_dead_zone": "Zona muerta izquierda",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "La zona muerta de la palanca analógica izquierda del controlador.",
   "midnightcontrols.menu.mappings.open_input_str": "Abrir el editor de archivo de asignaciones",
   "midnightcontrols.menu.max_left_x_value": "Valor máximo del eje X izquierdo",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "Cambia lo que el mod considera el valor más alto para el eje X izquierdo. Útil si su eje no usa el rango completo y parece lento.",
   "midnightcontrols.menu.max_left_y_value": "Valor máximo del eje Y izquierdo",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "Cambia lo que el mod considera el valor más alto para el eje Y izquierdo. Útil si su eje no usa el rango completo y parece lento.",
   "midnightcontrols.menu.max_right_x_value": "Valor máximo del eje X derecho",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "Cambia lo que el mod considera el valor más alto para el eje X derecho. Útil si su eje no usa el rango completo y parece lento.",
   "midnightcontrols.menu.max_right_y_value": "Valor máximo del eje Y derecho",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "Cambia lo que el mod considera el valor más alto para el eje Y derecho. Útil si su eje no usa el rango completo y parece lento.",
   "midnightcontrols.menu.mouse_speed": "Velocidad del ratón",
+  "midnightcontrols.menu.mouse_speed.tooltip": "La velocidad del ratón emulada del controlador.",
   "midnightcontrols.menu.reacharound.horizontal": "Colocación de bloque frontal",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "Habilita la colocación del bloque frontal, §cpodría considerarse trampa en algunos servidores§r.",
   "midnightcontrols.menu.reacharound.vertical": "Alcance vertical",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "Habilita el alcance vertical, §cpodría considerarse trampa en algunos servidores§r.",
   "midnightcontrols.menu.reload_controller_mappings": "Recargar asignaciones de controlador",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "Vuelve a cargar el archivo de asignaciones del controlador.",
   "midnightcontrols.menu.right_dead_zone": "Zona muerta derecha",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "La zona muerta de la palanca analógica derecha del controlador.",
   "midnightcontrols.menu.rotation_speed": "Velocidad de rotación (eje X)",
+  "midnightcontrols.menu.rotation_speed.tooltip": "La velocidad de rotación de la cámara en modo controlador. (eje X)",
   "midnightcontrols.menu.y_axis_rotation_speed": "Velocidad de rotación (eje Y)",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "La velocidad de rotación de la cámara en modo controlador. (eje Y)",
   "midnightcontrols.menu.separator.controller": "Controlador",
   "midnightcontrols.menu.separator.general": "General",
   "midnightcontrols.menu.title": "midnightcontrols - Configuraciones",
@@ -117,34 +139,12 @@
   "midnightcontrols.menu.title.mappings.string": "Editor de archivo de asignaciones",
   "midnightcontrols.menu.title.visual": "Opciones de apariencia",
   "midnightcontrols.menu.unfocused_input": "Entrada desenfocada",
+  "midnightcontrols.menu.unfocused_input.tooltip": "Habilita entrada del controlador cuando la ventana no está enfocada.",
   "midnightcontrols.menu.virtual_mouse": "Ratón virtual",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "Habilite el ratón virtual que es útil en el caso de una pantalla dividida.",
   "midnightcontrols.menu.virtual_mouse.skin": "Piel de ratón virtual",
   "midnightcontrols.narrator.unbound": "Resetear %s",
   "midnightcontrols.not_bound": "No ligado",
-  "midnightcontrols.tooltip.analog_movement": "Habilita el movimiento analógico cuando es posible.",
-  "midnightcontrols.tooltip.auto_switch_mode": "Si el modo de controles debe cambiarse a Controlador automáticamente si hay uno conectado.",
-  "midnightcontrols.tooltip.controller2": "Segundo controlador a uso, que permite el soporte de Joy-Cons por ejemplo.",
-  "midnightcontrols.tooltip.controller_type": "El tipo de controlador para mostrar los botones correctos.",
-  "midnightcontrols.tooltip.controls_mode": "El modo de controles.",
-  "midnightcontrols.tooltip.fast_block_placing": "Mientras vuela en modo creativo, permite la colocación rápida de bloques dependiendo su velocidad. §cEn algunos servidores, esto podría considerarse como trampa.",
-  "midnightcontrols.tooltip.fly_drifting": "Mientras vuela, habilita la deriva/inercia de vainilla.",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "Mientras vuela, habilita la deriva/inercia vertical de vainilla.",
-  "midnightcontrols.tooltip.hud_enable": "Alterna el indicador del botón del controlador en pantalla.",
-  "midnightcontrols.tooltip.hud_side": "La posición del HUD.",
-  "midnightcontrols.tooltip.left_dead_zone": "La zona muerta de la palanca analógica izquierda del controlador.",
-  "midnightcontrols.tooltip.max_left_x_value": "Cambia lo que el mod considera el valor más alto para el eje X izquierdo. Útil si su eje no usa el rango completo y parece lento.",
-  "midnightcontrols.tooltip.max_left_y_value": "Cambia lo que el mod considera el valor más alto para el eje Y izquierdo. Útil si su eje no usa el rango completo y parece lento.",
-  "midnightcontrols.tooltip.max_right_x_value": "Cambia lo que el mod considera el valor más alto para el eje X derecho. Útil si su eje no usa el rango completo y parece lento.",
-  "midnightcontrols.tooltip.max_right_y_value": "Cambia lo que el mod considera el valor más alto para el eje Y derecho. Útil si su eje no usa el rango completo y parece lento.",
-  "midnightcontrols.tooltip.mouse_speed": "La velocidad del ratón emulada del controlador.",
-  "midnightcontrols.tooltip.reacharound.horizontal": "Habilita la colocación del bloque frontal, §cpodría considerarse trampa en algunos servidores§r.",
-  "midnightcontrols.tooltip.reacharound.vertical": "Habilita el alcance vertical, §cpodría considerarse trampa en algunos servidores§r.",
-  "midnightcontrols.tooltip.reload_controller_mappings": "Vuelve a cargar el archivo de asignaciones del controlador.",
-  "midnightcontrols.tooltip.right_dead_zone": "La zona muerta de la palanca analógica derecha del controlador.",
-  "midnightcontrols.tooltip.rotation_speed": "La velocidad de rotación de la cámara en modo controlador. (eje X)",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "La velocidad de rotación de la cámara en modo controlador. (eje Y)",
-  "midnightcontrols.tooltip.unfocused_input": "Habilita entrada del controlador cuando la ventana no está enfocada.",
-  "midnightcontrols.tooltip.virtual_mouse": "Habilite el ratón virtual que es útil en el caso de una pantalla dividida.",
   "midnightcontrols.virtual_mouse.skin.default_light": "Ligera por defecto",
   "midnightcontrols.virtual_mouse.skin.default_dark": "Oscura por defecto",
   "midnightcontrols.virtual_mouse.skin.second_light": "Ligera segundario",
