--- a/src/main/resources/assets/midnightcontrols/lang/fr_fr.json
+++ b/src/main/resources/assets/midnightcontrols/lang/fr_fr.json
@@ -121,30 +121,30 @@
   "midnightcontrols.menu.virtual_mouse.skin": "Apparence souris virtuelle",
   "midnightcontrols.narrator.unbound": "Délier %s",
   "midnightcontrols.not_bound": "Non défini",
-  "midnightcontrols.tooltip.analog_movement": "Active le mouvement analogique si possible.",
-  "midnightcontrols.tooltip.auto_switch_mode": "Détermine si le mode de contrôle doit automatiquement changer sur Manette si une manette est connectée et inversement.",
-  "midnightcontrols.tooltip.controller2": "Défini une deuxième manette, utile dans le cas d'utilisation de Joy-Cons.",
-  "midnightcontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
-  "midnightcontrols.tooltip.controls_mode": "Change le mode de contrôle.",
-  "midnightcontrols.tooltip.fast_block_placing": "Active le placement rapide de blocs en vol.",
-  "midnightcontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement Vanilla.",
-  "midnightcontrols.tooltip.fly_drifting_vertical": "Pendant que le joueur vole, active le glissement vertical Vanilla.",
-  "midnightcontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
-  "midnightcontrols.tooltip.hud_side": "Change la position du HUD.",
-  "midnightcontrols.tooltip.left_dead_zone": "Zone morte de l'axe gauche de la manette.",
-  "midnightcontrols.tooltip.max_left_x_value": "Change ce que le mod considère comme valeur maximale pour l'axe X gauche. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
-  "midnightcontrols.tooltip.max_left_y_value": "Change ce que le mod considère comme valeur maximale pour l'axe Y gauche. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
-  "midnightcontrols.tooltip.max_right_x_value": "Change ce que le mod considère comme valeur maximale pour l'axe X droit. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
-  "midnightcontrols.tooltip.max_right_y_value": "Change ce que le mod considère comme valeur maximale pour l'axe Y droit. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
-  "midnightcontrols.tooltip.mouse_speed": "Change la vitesse de la souris émulée par la manette.",
-  "midnightcontrols.tooltip.reacharound.horizontal": "Active le placement avant de blocs, §cpeut être considérer comme de la triche sur certains serveurs§r.",
-  "midnightcontrols.tooltip.reacharound.vertical": "Active le placement vertical de blocs, c'est-à-dire de blocs en dessous du bloc sur lequel vous êtes placé, §cpeut être considérer comme de la triche sur certains serveurs§r.",
-  "midnightcontrols.tooltip.reload_controller_mappings": "Recharge le fichier de configuration des manettes.",
-  "midnightcontrols.tooltip.right_dead_zone": "Zone morte de l'axe droit de la manette.",
-  "midnightcontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra. (X)",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "Change la vitesse de rotation de la caméra. (Y)",
-  "midnightcontrols.tooltip.unfocused_input": "Autorise les entrées manette quand la fenêtre n'est pas sélectionnée.",
-  "midnightcontrols.tooltip.virtual_mouse": "Active la souris virtuelle qui est pratique dans le cas d'un écran partagé.",
+  "midnightcontrols.menu.analog_movement.tooltip": "Active le mouvement analogique si possible.",
+  "midnightcontrols.menu.auto_switch_mode.tooltip": "Détermine si le mode de contrôle doit automatiquement changer sur Manette si une manette est connectée et inversement.",
+  "midnightcontrols.menu.controller2.tooltip": "Défini une deuxième manette, utile dans le cas d'utilisation de Joy-Cons.",
+  "midnightcontrols.menu.controller_type.tooltip": "Le type de contrôle n'influe que sur les boutons affichés.",
+  "midnightcontrols.menu.controls_mode.tooltip": "Change le mode de contrôle.",
+  "midnightcontrols.menu.fast_block_placing.tooltip": "Active le placement rapide de blocs en vol.",
+  "midnightcontrols.menu.fly_drifting.tooltip": "Pendant que le joueur vole, active le glissement Vanilla.",
+  "midnightcontrols.menu.fly_drifting_vertical.tooltip": "Pendant que le joueur vole, active le glissement vertical Vanilla.",
+  "midnightcontrols.menu.hud_enable.tooltip": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
+  "midnightcontrols.menu.hud_side.tooltip": "Change la position du HUD.",
+  "midnightcontrols.menu.left_dead_zone.tooltip": "Zone morte de l'axe gauche de la manette.",
+  "midnightcontrols.menu.max_left_x_value.tooltip": "Change ce que le mod considère comme valeur maximale pour l'axe X gauche. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "midnightcontrols.menu.max_left_y_value.tooltip": "Change ce que le mod considère comme valeur maximale pour l'axe Y gauche. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "midnightcontrols.menu.max_right_x_value.tooltip": "Change ce que le mod considère comme valeur maximale pour l'axe X droit. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "midnightcontrols.menu.max_right_y_value.tooltip": "Change ce que le mod considère comme valeur maximale pour l'axe Y droit. Utile si votre axe n'utilise pas l'entièreté de l'ensemble des valeurs et paraît lent.",
+  "midnightcontrols.menu.mouse_speed.tooltip": "Change la vitesse de la souris émulée par la manette.",
+  "midnightcontrols.menu.reacharound.horizontal.tooltip": "Active le placement avant de blocs, §cpeut être considérer comme de la triche sur certains serveurs§r.",
+  "midnightcontrols.menu.reacharound.vertical.tooltip": "Active le placement vertical de blocs, c'est-à-dire de blocs en dessous du bloc sur lequel vous êtes placé, §cpeut être considérer comme de la triche sur certains serveurs§r.",
+  "midnightcontrols.menu.reload_controller_mappings.tooltip": "Recharge le fichier de configuration des manettes.",
+  "midnightcontrols.menu.right_dead_zone.tooltip": "Zone morte de l'axe droit de la manette.",
+  "midnightcontrols.menu.rotation_speed.tooltip": "Change la vitesse de rotation de la caméra. (X)",
+  "midnightcontrols.menu.y_axis_rotation_speed.tooltip": "Change la vitesse de rotation de la caméra. (Y)",
+  "midnightcontrols.menu.unfocused_input.tooltip": "Autorise les entrées manette quand la fenêtre n'est pas sélectionnée.",
+  "midnightcontrols.menu.virtual_mouse.tooltip": "Active la souris virtuelle qui est pratique dans le cas d'un écran partagé.",
   "midnightcontrols.virtual_mouse.skin.default_light": "défaut clair",
   "midnightcontrols.virtual_mouse.skin.default_dark": "défaut foncé",
   "midnightcontrols.virtual_mouse.skin.second_light": "second clair",
